# pixi-cookiecutter-bioinformatics

./: .gitignore  .pre-commit-config.yaml  README.md  cookiecutter.json  pyproject.toml  template_config.yml
.github/workflows/: test.yml
hooks/: post_gen_project.py
{{cookiecutter.package_name}}/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
{{cookiecutter.package_name}}/.github/workflows/: test.yml
{{cookiecutter.package_name}}/config/: config.yaml  samples.tsv
{{cookiecutter.package_name}}/docs/: commands.rst  conf.py  configuration_reference.md  dependency_management.md  getting-started.rst  index.rst  make.bat  workflow_development.md
{{cookiecutter.package_name}}/docs/examples/: README.md  config_rna_seq.yaml  config_variant_calling.yaml  samples_extended.tsv
{{cookiecutter.package_name}}/docs/examples/workflows/: rna_seq_complete.smk
{{cookiecutter.package_name}}/workflow/: Snakefile  example_rnaseq.smk
{{cookiecutter.package_name}}/workflow/envs/: alignment.yaml  counting.yaml  qc.yaml  trimming.yaml
{{cookiecutter.package_name}}/workflow/rules/: common.smk
