[project]
name = "pixi_cookiecutter"
description = "Cookiecutter for setting up bioinformatics projects with pixi"
license = "MIT"
version = "0.1.0"
readme = "README.md"
keywords = ["cookiecutter", "pixi"]
authors = [{name = "Jonathon Vandezande"}, {name = "David Koppstein"}, {name = "Andreas Bok Andersen"}]
requires-python = ">=3.12"

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
platforms = ["linux-64", "osx-arm64", "win-64"]

[tool.pixi.dependencies]
cookiecutter = ">=2.6"

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default"}

[tool.pixi.feature.dev.tasks]
fmt = { cmd="ruff format hooks" }
lint = { cmd="ruff check hooks --fix" }
types = { cmd="ty check hooks" }
test = { cmd="pytest" }
all = { depends-on = ["fmt", "lint", "types", "test"] }

[tool.pixi.feature.dev.dependencies]
pytest = ">=9.0.0,<10"
pytest-cov = ">=7.0.0,<8"
ruff = ">=0.14.4,<0.15"
pre-commit = ">=4.4.0,<5"
mkdocs = ">=1.6.1,<2"

[tool.pixi.feature.dev.pypi-dependencies]
ty = "*"

[tool.ruff]
extend-exclude = ["\\{\\{cookiecutter.package_name\\}\\}"]
line-length = 100

[tool.ruff.lint]
select = [
    "B",  # bugbear
    "D",  # pydocstyle
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming conventions
    "W",  # pycodestyle warnings
    "C4", # comprehensions
    "PL", # pylint
    "PT", # flake8-pytest-style
    "PIE", # misc lints
    "PYI", # flake8-pyi
    "TID", # tidy imports
    "TCH", # type-checking imports
    "RUF", # Ruff-specific rules
    "RSE", # flake8-raise
    "ICN001", # unconventional-import-alias
]
ignore = [
    "D100", # Missing docstring in public module
    "N806", # Non-lowercase variable in function
    "PLR0911", # Too many returns
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments to function call
    "PLR0914", # Too many locals
    "PLR0915", # Too many statements
    "PLR1702", # Too many nested-blocks
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
testpaths = ["hooks"]
addopts = "--doctest-modules"
doctest_optionflags = "NORMALIZE_WHITESPACE"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
