[project]
name = "{{cookiecutter.package_name}}"
description = "{{cookiecutter.project_name}}"
{%- if cookiecutter.license != 'None' %}
license = "{{cookiecutter.license}}"
{%- endif %}
version = "0.0.1"
readme = "README.md"
keywords = []
authors = [{name = "{{cookiecutter.author_name}}"}]
requires-python = ">={python_version}"

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
platforms = ["linux-64", "osx-arm64", "linux-aarch64", "osx-64"]

[tool.pixi.dependencies]
{pixi_dependencies}

[tool.pixi.pypi-dependencies]
{{cookiecutter.package_name}} = { path = ".", editable = true }

[tool.pixi.tasks]
# Data processing tasks
clean = "find . -type f -name '*.py[co]' -delete && find . -type d -name '__pycache__' -delete"
setup-dirs = "mkdir -p resources/raw_data resources/external results workspace sandbox"
pipeline = "snakemake --snakefile workflow/Snakefile --cores 4"
pipeline-dry = "snakemake --snakefile workflow/Snakefile --dry-run"
help-setup = """echo 'Quick setup guide:' &&
    echo '1. Copy your data files to resources/raw_data/' &&
    echo '2. Edit config/samples.tsv with your sample information' &&
    echo '3. Edit config/config.yaml with your analysis parameters' &&
    echo '4. Run: pixi run pipeline' &&
    echo '' &&
    echo 'See docs/examples/ for detailed configuration examples'"""

# Utility tasks
setup-dirs = """echo 'Setting up project directories...' &&
    mkdir -p resources/raw_data resources/external results workspace sandbox"""

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default"}

[tool.pixi.feature.dev.tasks]
fmt = { cmd="ruff format ." }
lint = { cmd="ruff check . --fix" }
types = { cmd="ty check" }
test = { cmd="pytest" }
snkfmt = { cmd="snakefmt workflow" }
all = { depends-on = ["fmt", "lint", "types", "test", "snakefmt"] }

[tool.pixi.feature.dev.dependencies]
pytest = ">=8.3"
pytest-cov = ">=6.0"
ruff = ">=0.11"
pre-commit = ">=4.2"
snakemake = ">=8.20"
snakefmt = ">=0.10"
graphviz = "*"
{pixi_test_dependencies}

[tool.pixi.feature.dev.pypi-dependencies]
ty = "*"

[tool.ruff]
line-length = {{cookiecutter.line_length}}
extend-exclude = ["docs/conf.py"]

[tool.ruff.lint]
select = [
    "B",  # bugbear
    "D",  # pydocstyle
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming conventions
    "W",  # pycodestyle warnings
    "C4", # comprehensions
    "PL", # pylint
    "PT", # flake8-pytest-style
    "PIE", # misc lints
    "PYI", # flake8-pyi
    "TID", # tidy imports
    "TCH", # type-checking imports
    "RUF", # Ruff-specific rules
    "RSE", # flake8-raise
    "ICN001", # unconventional-import-alias
]
ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "N806", # Non-lowercase variable in function
    "PLR0911", # Too many returns
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments to function call
    "PLR0914", # Too many locals
    "PLR0915", # Too many statements
    "PLR1702", # Too many nested-blocks
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
testpaths = ["tests", "{{cookiecutter.package_name}}"]
addopts = "--doctest-modules"
doctest_optionflags = "NORMALIZE_WHITESPACE"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
